--- a/app/res/layout-television/service_list_item_nn.xml
+++ b/app/res/layout-television/service_list_item_nn.xml
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content">
 
         <ProgressBar
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:id="@+id/service_progress"
-            android:background="@color/black_transparent"
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:layout_alignParentTop="true"
