--- a/app/res/values-television/themes.xml
+++ b/app/res/values-television/themes.xml
@@ -8,7 +8,7 @@
         <item name="android:textAlignment">center</item>
     </style>
 
-    <style name="Theme.Visiondroid.FullscreenDialog" parent="Theme.Material3.DayNight.Dialog">
+    <style name="Theme.Visiondroid.FullscreenDialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowIsFloating">false</item>
