--- a/app/res/xml/profile_preferences.xml
+++ b/app/res/xml/profile_preferences.xml
@@ -23,6 +23,12 @@
         android:title="@string/ssl_enabled"/>
 
     <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="trust_all_certs"
+        android:dependency="ssl"
+        android:title="@string/trust_all_certs"/>
+
+    <CheckBoxPreference
         android:defaultValue="true"
         android:key="login"
         android:title="@string/login_enabled"/>
