--- a/app/res/layout/tv_preferences_main.xml
+++ b/app/res/layout/tv_preferences_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:name="org.openvision.visiondroid.tv.fragment.SettingsFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
