--- a/app/res/layout/backup.xml
+++ b/app/res/layout/backup.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -38,7 +38,7 @@
             android:layout_marginBottom="4dp"
             android:orientation="vertical">
             <TextView
-                style="@style/SimpleHeader"
+                style="@style/SimpleHeaderSmall"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
