--- a/app/res/layout/timer_edit.xml
+++ b/app/res/layout/timer_edit.xml
@@ -64,7 +64,7 @@
 
         <TextView
             android:id="@+id/TextViewBeginTitle"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/begin_time"/>
@@ -122,7 +122,7 @@
 
             <TextView
                 android:id="@+id/TextViewTime"
-                style="@style/SimpleHeader"
+                style="@style/SimpleHeaderSmall"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/end_time"/>
@@ -175,7 +175,7 @@
 
         <TextView
             android:id="@+id/TextViewRepeatedTitle"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/repeatings"/>
@@ -200,7 +200,7 @@
 
         <TextView
             android:id="@+id/TextViewServiceTitle"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/service"/>
@@ -225,7 +225,7 @@
 
         <TextView
             android:id="@+id/TextViewAfterEvent"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/afterevent"/>
@@ -245,7 +245,7 @@
 
         <TextView
             android:id="@+id/TextViewLocation"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/location"/>
@@ -265,7 +265,7 @@
 
         <TextView
             android:id="@+id/TextViewTagsTitle"
-            style="@style/SimpleHeader"
+            style="@style/SimpleHeaderSmall"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/tags"/>
