--- a/app/res/layout/backup.xml
+++ b/app/res/layout/backup.xml
@@ -44,9 +44,9 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:text="@string/backup_settings"/>
-            <CheckBox
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/backup_export_settings"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/backup_export_settings"/>
