--- a/app/res/layout/profile_edit.xml
+++ b/app/res/layout/profile_edit.xml
@@ -115,6 +115,7 @@
             android:id="@+id/LoginLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
