--- a/app/res/layout/movie_list_item.xml
+++ b/app/res/layout/movie_list_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:checkable="true"
     android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="?attr/cardBackgroundColor"
     app:cardElevation="4dp"
