--- a/app/res/layout/two_line_card_list_item_no_indicator.xml
+++ b/app/res/layout/two_line_card_list_item_no_indicator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Theme.DreamDroid.Night"
+    style="@style/Theme.VisionDroid.Night"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:checkable="true"
