--- a/app/res/layout/profile_edit.xml
+++ b/app/res/layout/profile_edit.xml
@@ -20,7 +20,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/EditTextProfile"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 android:layout_marginRight="80dp"
                 android:layout_marginEnd="80dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/EditTextHost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
                 android:layout_marginLeft="-80dp"
                 android:layout_marginStart="-80dp">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/EditTextPort"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/EditTextUser"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/EditTextPass"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -165,7 +165,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/EditTextSSID"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -193,7 +193,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/EditTextStreamHost"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -227,7 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextEncoderPath"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -242,7 +242,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextEncoderPort"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -274,7 +274,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextEncodermUser"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -288,7 +288,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextEncoderPass"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -311,7 +311,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextVideoBitrate"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -328,7 +328,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextAudioBitrate"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -371,7 +371,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextStreamPort"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -379,7 +379,7 @@
                         android:hint="@string/port_stream_live"
                         android:inputType="number"
                         android:maxLength="5"
-                        android:singleLine="true"></EditText>
+                        android:singleLine="true"></com.google.android.material.textfield.TextInputEditText>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <CheckBox
@@ -411,7 +411,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/EditTextFilePort"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -419,7 +419,7 @@
                         android:hint="@string/port_stream_file"
                         android:inputType="number"
                         android:maxLength="5"
-                        android:singleLine="true"></EditText>
+                        android:singleLine="true"></com.google.android.material.textfield.TextInputEditText>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <CheckBox
