--- a/app/res/layout/video_player_overlay.xml
+++ b/app/res/layout/video_player_overlay.xml
@@ -110,7 +110,7 @@
                 app:cardBackgroundColor="?attr/colorPrimaryDark"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="false">
+                app:cardPreventCornerOverlap="@bool/preventCardCornerOverlap">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
