--- a/app/res/layout/service_list_item_nn.xml
+++ b/app/res/layout/service_list_item_nn.xml
@@ -8,7 +8,7 @@
     android:padding="0dp"
     app:cardBackgroundColor="?attr/cardBackgroundColor"
     app:cardElevation="4dp"
-    app:cardPreventCornerOverlap="false"
+    app:cardPreventCornerOverlap="@bool/preventCardCornerOverlap"
     app:contentPadding="0dp">
 
     <LinearLayout
