--- a/app/res/values-v21/bools.xml
+++ b/app/res/values-v21/bools.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="requireTranslucentStatusbar">true</bool>
+    <bool name="preventCardCornerOverlap">false</bool>
 </resources>
